[build-system]
requires = [ "setuptools>=60", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[project]
name = "rmi.etoolbox"
description = "A set of tools and functions we use across projects."
license = { file = "LICENSE.txt" }
readme = "README.rst"
dynamic = [ "version" ]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "adlfs>=2023.9.0,<2024.13.0",
    "fsspec>=2022.11.0,<2025.6.0",
    "orjson>=3.8,<3.11",
    "pandas>= 1.4,< 2.4",
    "platformdirs>3.0,<4.4",
    "polars>=0.20,<1.32",
    "pyarrow>=9,<21",
    "s3fs>=2022.11.0, <2025.6.0",
    "tzdata>=2022.7;platform_system=='Windows'",
    "click>8,<9"
]
# entry points
scripts.rmi = "etoolbox.cli:main"
scripts.etb = "etoolbox.cli:main"

[project.optional-dependencies]
dev = [
    "coverage>=5.3,<7.10",  # Lets us track what code is being tested
    "pytest>=6.2,<8.5",  # test framework
    "pytest-console-scripts>=1.1,<1.5",  # Allow automatic testing of scripts
    "tqdm>=4.63,<4.68",
    "requests_mock",  # used by remote_zip tests
    "pytest-socket",  #
]
doc = [
    "doc8>=0.9,<2.1",  # Ensures clean documentation formatting
    "furo>=2022.4.7",  # A clean customisable Sphinx documentation theme.
    "rstcheck[sphinx,toml]>=5.0,<6.3",  # ReStructuredText linter
    "sphinx>=4,!=5.1.0,<8.2.4",
    "sphinx-autoapi>=1.8,<3.7",
    "sphinx-issues>=1.2,<5.1",
    "sphinx-autodoc-typehints>1.19,<3.1.1",
    "sphinxcontrib-mermaid>0.7,<1.1.0",
    "sphinx-click",
]
qa = [ # in local development these are provided globally, here for GHA
    "pre-commit>=2.9,<4.3",  # Allow us to run pre-commit hooks in testing
    "pre-commit-uv>=4.1,<4.2",
    "ruff>0.0.215,<0.11.14",
]
tooling = [ # in local development these are provided globally
    "rmi-etoolbox[qa]",
    "tox>=4.16.0,<4.28",  # Python test environment manager
    "tox-uv>=1.25,<2",
]
tests = [ "rmi-etoolbox[dev,tooling]" ]
optional = [
    "plotly>5.10,<6.2",
    "sqlalchemy>1.4,<2.1",
]
pudl-test = []

[tool.setuptools.dynamic]
version = { attr = "etoolbox._version.__version__" }

[tool.setuptools_scm]
write_to = "src/etoolbox/_version.py"

#######################################################################################
# Configurations for linters and other tools
#######################################################################################
[tool.doc8]
max-line-length = 88
ignore-path = "docs/_build"

[tool.pytest.ini_options]
testpaths = [ "." ]
addopts = [ "--verbose", "--doctest-modules" ]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = " %Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "WARNING"
doctest_optionflags = [ "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS" ]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Creating a LegacyVersion:DeprecationWarning:pkg_resources[.*]",
]

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [ "pr", "issue", "user", "include" ]
ignore_messages = '(Hyperlink target .* is not referenced\.$|Duplicate implicit target name:|An `AttributeError` error occured.*)'
ignore_directives = [ "bibliography", "todo", "include", "click" ]

[tool.ruff]
line-length = 88
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".pixi",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [  # https://beta.ruff.rs/docs/rules/
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C",
    "C4", # flake8-comprehensions
    "D", # flake8-docstrings
    "E",  # pycodestyle
    "F",  # Pyflakes
    "FBT", # flake8-boolean-trap
    "G", # flake8-logging-format
    "I", # isort
    "TID", # flake8-tidy-imports
    "N", # pep8-naming
    "PD",  # pandas
    "PT", # flake8-pytest-style
    "PGH", # pygrep-hooks
    "S", # bandit
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "UP", # pyupgrade
    "W",  # pycodestyle
    "RUF", # Ruff-specific rules
    "Q", # flake8-quotes
]
ignore = [
    "D105",
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D401",  # First line of docstring should be in imperative mood: "{first_line}"
    "D407",  # dashed-underline-after-section, upsets Sphinx
    "D416",
    # conflict with ruff format
    "W191",  # tab-indentation
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    "D206",  # indent-with-spaces
    "D300",  # triple-single-quotes
    "Q000",  # bad-quotes-inline-string
    "Q001",  # bad-quotes-multiline-string
    "Q002",  # bad-quotes-docstring
    "Q003",  # avoidable-escaped-quote
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "ISC002",  # multi-line-implicit-string-concatenation
]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-type-checking.strict = true
mccabe.max-complexity = 15  # Unlike Flake8, default to a complexity level of 10.
pycodestyle.max-doc-length = 88
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401" ]
"docs/conf.py" = [ "E501" ]
"docs/benchmarks.py" = [ "D103", "S301", "S311" ]
"tests/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "F841",  # Local variable `pudl` is assigned to but never used
    "FBT003", # Boolean positional value in function call, can't fix it pytest.param
    "PD901",
    "PT006",  # Wrong name(s) type in `@pytest.mark.parametrize`, expected `tuple`
    "PT011",  # `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
    "S101",  # Use of `assert` detected
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements

]
"tests/unit/utils_remote_zip_test.py" = [ "D102", "D103", "D107", "FBT002" ]
"_test_classes.py" = [ "FBT003" ]
"table_map.py" = [ "D103", "E501" ]
"pudl_helpers.py" = [ "PD901" ]


[tool.tox]
env_list = [ "linters", "docs", "ci" ]

[tool.tox.env_run_base]
allowlist_externals = [ "bash", "coverage", "sphinx-build", "pytest", "ruff", "pre-commit" ]
runner = "uv-venv-runner"
passenv = [ "ETB_AZURE_SAS_TOKEN", "ETB_AZURE_ACCOUNT_NAME" ]
extras = [ "qa", "dev", "doc", "optional" ]

[tool.tox.env.linters]
description = "Run the pre-commit, flake8 and bandit linters."
commands = [
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "python-no-eval" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "python-no-log-warn" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "python-check-blanket-noqa" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "check-merge-conflict" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "check-yaml" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "check-case-conflict" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "debug-statements" ],
    [ "pre-commit", "run", "--all-files", "--show-diff-on-failure", "name-tests-test" ],
    [ "ruff", "check", "." ],
]

[tool.tox.env.docs]
description = "Build the HTML docs from scratch using Sphinx."
commands = [
    [ "bash", "-c", "rm -rf docs/_build" ],
    [ "doc8", "docs/", "README.rst" ],
    [ "rstcheck", "--config", "pyproject.toml", "--recursive", "./" ],
    [ "sphinx-build", "-b", "html", "docs", "docs/_build/html" ],
]

[tool.tox.env.ci]
description = "un all continuous integration (CI) checks & generate test coverage."
commands = [
    [ "coverage", "erase" ],
    [ "coverage", "run", "--source={envsitepackagesdir}/etoolbox", "-m", "pytest", "--doctest-modules", "{envsitepackagesdir}/etoolbox", "tests/unit" ],
    [ "coverage", "lcov", "-o", "coverage.info" ],
    [ "coverage", "report", "--sort=cover" ],
]
